fixes for findbugs process